# nvml

./: CMakeLists.txt
src/: CMakeLists.txt
src/libpmem/: CMakeLists.txt
src/libpmemobj/: heap.c  obj.c  obj.h  palloc.c  pmalloc.c  pmalloc.h  tx.c
src/libvmem/: Makefile  libvmem.c  vmem.c  vmem.h
src/test/: Makefile
src/test/obj_memcheck/: memcheck0.log.match
src/test/vmem_check/: vmem_check.c
src/test/vmem_custom_alloc/: vmem_custom_alloc.c
src/test/vmem_delete/: out0.log.match  vmem_delete.c
src/test/vmem_malloc_usable_size/: vmem_malloc_usable_size.c
src/test/vmem_valgrind/: TEST2  TEST3  TEST4
