#add_subdirectory(benchmarks)
#add_subdirectory(examples)
#add_subdirectory(include)
#add_subdirectory(jemalloc)
add_subdirectory(libpmem)
#add_subdirectory(libpmemblk)
#add_subdirectory(libpmemlog)
#add_subdirectory(libpmemobj)
#add_subdirectory(libvmem)
#add_subdirectory(libvmmalloc)
#add_subdirectory(test)
#add_subdirectory(tools)
